--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>cht.</title>
+    <title>recall.</title>
   </head>
   <body>
     <div class="container"></div>
